crates/glyph-cli/tests/corpus/valid/freeform_param_slot.glyph
skill audit(scope = ".")
    description: "Audit code under the given scope."
    quality:
        "Inspect every file under {scope} before reporting issues."
    flow:
        "Audit."
