crates/glyph-cli/tests/corpus/invalid/slot_in_freeform_section.glyph
skill summarize(scope = ".")
    description: "Freeform body references an undeclared parameter."
    quality:
        "Maintain {undeclared} consistency"

    flow:
        "Run the work."
